tsworkshop/workshop1/manifests/1-ingress-nginx-hipstershop.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: hipstershop-ingress
  namespace: hipstershop
spec:
  rules:
    - host: "hipstershop.template.training.tigera.ca"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
