tsworkshop/workshop1/manifests/10-gnetpol-deny-default.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  types:
  - Ingress
  - Egress
