tsworkshop/workshop1/manifests/9-gnetpol-hep-external.yaml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  labels:
    projectcalico.org/tier: security
  name: security.hep-external
spec:
  tier: security
  order: 2
  selector: bastion == "true"
  types:
    - Egress
    - Ingress
  ingress:
    - action: Allow
      destination:
        ports:
          - 443
      protocol: TCP
    - action: Allow
      destination:
        ports:
          - 68
      protocol: UDP
    - action: Allow
      protocol: ICMP
    - action: Allow
      source:
        selector: all()
  egress:
    - action: Allow
      destination:
        selector: all()
    - action: Allow
      destination:
        ports:
          - 443
        selector: hep-external-domains == "true"
      protocol: TCP
    - action: Allow
      protocol: ICMP
    - action: Allow
      destination:
        selector: loopback-cidr == 'true'
    - action: Allow
      destination:
        ports:
          - 53
          - 67
      protocol: TCP
    - action: Allow
      destination:
        ports:
          - 53
      protocol: UDP
    - action: Allow
      destination:
        selector: kube-api == 'true'
        ports:
          - 6443
      protocol: TCP
    - action: Allow
      destination:
        selector: external-ep == "trusted-repos"
